[tool.poetry]
name = "careerpro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.32.0"
reportlab = "^4.0.0"
python-dotenv = "^1.1.0"
openai = "^1.0.0"  # added line
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
